--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,10 @@ cache:
     - $HOME/girder_build/data
 
 before_install:
+  # Fix a travis/boto issue.  See
+  # https://github.com/travis-ci/travis-ci/issues/7940
+  - sudo rm -f /etc/boto.cfg
+
   - GIRDER_VERSION=2.x-maintenance
   - OVERLAYS_PATH=$TRAVIS_BUILD_DIR
   - GIRDER_PATH=$HOME/girder/girder
