--- a/.travis.yml
+++ b/.travis.yml
@@ -23,6 +23,12 @@ before_install:
   - CACHE=$HOME/.cache CMAKE_VERSION=3.4.3 CMAKE_SHORT_VERSION=3.4 source $GIRDER_PATH/scripts/install_cmake.sh
   - cmake --version
 
+  - if [ ${TRAVIS_PYTHON_VERSION:0:1} == "3" ]; then export MONGO_VERSION=3.6.2; else export MONGO_VERSION=3.4.10; fi
+  - CACHE=$HOME/.cache source $girder_path/scripts/install_mongo.sh
+  - mkdir /tmp/db
+  - mongod --dbpath=/tmp/db >/dev/null 2>/dev/null &
+  - mongod --version
+
 install:
   - pushd $GIRDER_PATH
   - pip install --no-cache-dir -U -r requirements-dev.txt -e .[mount]
