--- a/.travis.yml
+++ b/.travis.yml
@@ -45,6 +45,7 @@ install:
   - ls -l $GIRDER_PATH/plugins
 
   - npm-install-retry
+  - girder-install web
 
 script:
   - mkdir -p $GIRDER_BUILD_PATH
