--- a/.travis.yml
+++ b/.travis.yml
@@ -76,6 +76,8 @@ before_install:
     # https://github.com/travis-ci/travis-ci/issues/7940
     - sudo rm -f /etc/boto.cfg
 
+    - if [ ${TRAVIS_PYTHON_VERSION:0:1} == "3" ]; then export PY3="true"; else export PY2="true"; fi
+
     - GIRDER_VERSION=2.x-maintenance
     - GIRDER_WORKER_VERSION=v0.5.1
     - OVERLAYS_PATH=$TRAVIS_BUILD_DIR
@@ -104,7 +106,7 @@ before_install:
     - CACHE=$HOME/.cache CMAKE_VERSION=3.4.3 CMAKE_SHORT_VERSION=3.4 source $GIRDER_PATH/scripts/install_cmake.sh
     - cmake --version
 
-    - if [ ${TRAVIS_PYTHON_VERSION:0:1} == "3" ]; then export MONGO_VERSION=3.6.2; else export MONGO_VERSION=3.4.10; fi
+    - if [ -n "${PY3}" ]; then export MONGO_VERSION=3.6.2; else export MONGO_VERSION=3.4.10; fi
     - source $GIRDER_PATH/scripts/install_mongo.sh
     - mkdir /tmp/db
     - mongod --dbpath=/tmp/db >/dev/null 2>/dev/null &
@@ -191,6 +193,8 @@ install:
     - if [ -n "${PY3}" ]; then
           pip install -e $LARGE_IMAGE_PATH[memcached,openslide] ;
       else
+          export CPLUS_INCLUDE_PATH=/usr/include/gdal
+          export C_INCLUDE_PATH=/usr/include/gdal
           pip install gdal==1.10.0 &&
           pip install -e $LARGE_IMAGE_PATH[memcached,openslide,mapnik] ;
       fi
