--- a/.travis.yml
+++ b/.travis.yml
@@ -72,7 +72,7 @@ before_install:
     - if [ ${TRAVIS_PYTHON_VERSION:0:1} == "3" ]; then export PY3="true"; else export PY2="true"; fi
     - GIRDER_VERSION=2.x-maintenance
     - GIRDER_WORKER_VERSION=master
-    - LARGE_IMAGE_VERSION=master
+    - LARGE_IMAGE_VERSION=2.x-maintenance
     - SLICER_CLI_WEB_VERSION=master
     - HISTOMICSTK_VERSION=master
     - HISTOGRAM_VERSION=master
