shrink log size

--- a/.travis.yml
+++ b/.travis.yml
@@ -152,7 +152,7 @@ script:
     - python2 -m girder_worker >/tmp/worker.out 2>&1 &
     - cd $build_path
     - cmake -DPYTHON_COVERAGE:BOOL=${PY_COVG} -DPYTHON_EXECUTABLE:FILEPATH="`which python`" -DPYTHON_VERSION:STRING=${TRAVIS_PYTHON_VERSION} -DRUN_CORE_TESTS:BOOL="OFF" -DTEST_PLUGINS:STRING="overlays" $girder_path
-    - make -j 5
+    - make -j 5 > /dev/null 
     - JASMINE_TIMEOUT=15000 ctest -VV -j 3
     # - travis-sphinx build --source=$main_path/docs
 
