--- a/.travis.yml
+++ b/.travis.yml
@@ -77,6 +77,7 @@ before_install:
     - HISTOMICSTK_VERSION=master
     - HISTOGRAM_VERSION=master
     - COLORMAPS_VERSION=master
+    - CONFIGURATION_VERSION=master
     - main_path=$PWD
     - OVERLAYS_PATH=$TRAVIS_BUILD_DIR
     - build_path=$HOME/build
@@ -114,6 +115,9 @@ before_install:
     - colormaps_path=$girder_path/plugins/colormaps
     - git clone https://github.com/cj-abcs/colormaps.git $colormaps_path && git -C $colormaps_path checkout $COLORMAPS_VERSION
 
+    - configuration_path=$girder_path/plugins/configuration
+    - git clone https://github.com/abcsFrederick/configuration.git $configuration_path && git -C $configuration_path checkout $CONFIGURATION_VERSION
+
     - export MONGO_VERSION=3.4.19
     - export PY_COVG="ON"
     - CACHE=$HOME/.cache source $girder_path/scripts/install_mongo.sh >/dev/null 2>/dev/null &
@@ -142,7 +146,7 @@ install:
     - cd $girder_path
     - pip install -U --upgrade-strategy eager -r $slicer_cli_web_path/requirements.txt
     - npm-install-retry
-    - BABEL_ENV=cover NYC_CWD="$main_path" girder-install web --plugins=jobs,worker,large_image,slicer_cli_web,HistomicsTK,histogram,colormaps,overlays --dev > /dev/null 
+    - BABEL_ENV=cover NYC_CWD="$main_path" girder-install web --plugins=jobs,worker,large_image,slicer_cli_web,HistomicsTK,histogram,colormaps,overlays,configuration --dev > /dev/null 
     - pip install jupyter sphinx sphinx_rtd_theme nbsphinx travis-sphinx
     # - pip install numpy==1.13.1  # pin numpy for now
     - pip freeze  # report what we have installed
