add workflow under overlay

--- a/girder_overlays/web_client/package.json
+++ b/girder_overlays/web_client/package.json
@@ -20,7 +20,8 @@
             "slicer_cli_web",
             "histogram",
             "colormaps",
-            "histomicsui"
+            "histomicsui",
+            "ssrtask"
         ]
     }
 }
