--- a/girder_overlays/web_client/package.json
+++ b/girder_overlays/web_client/package.json
@@ -20,8 +20,7 @@
             "slicer_cli_web",
             "histogram",
             "colormaps",
-            "histomicsui",
-            "ssrtask"
+            "histomicsui"
         ]
     }
 }
